# NEAT-learning

./: README.md  idea.list
demo/: CMakeLists.txt  main.cpp  mariobros_training.cpp  network.cpp  network.h  nn_test.cpp  node.cpp  node.h  objects.cpp  objects.h  obstacle.cpp  obstacle.h  player.cpp  player.h  random.hpp  sprite_test.cpp  textures.cpp  textures.h  todo
demo/config/: config.cpp  config.h  config.json
demo/floor/: floor.cpp  floor.h
demo/ga_models/: genetic_algorithm.cpp  genetic_algorithm.h  genome.cpp  genome.h
demo/models/: obstacle.cpp  obstacle.h  player.cpp  player.h
demo/music/: music.cpp  music.h
demo/nn_models/: network.cpp  network.h  node.cpp  node.h
demo/rand/: rand.cpp  rand.h
demo/tests/: nn_test.cpp  rand_test.cpp  sprite_test.cpp
demo/text/: text.cpp  text.h
demo/textures/: textures.cpp  textures.h
notes/: AI-techniques-for-game-programming.txt  NEAT  NN
racecar-sim/: direction.xcf  main.py  notes
